--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "prisma": "^6.16.2",
     "typescript": "^5.0"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "bun@1.2.5"
 }
