--- a/package.json
+++ b/package.json
@@ -30,6 +30,5 @@
     "prisma": "^6.16.2",
     "typescript": "^5.0"
   },
-  "type": "module",
-  "packageManager": "bun@1.2.5"
+  "type": "module"
 }
